# singer-lab-to-nwb

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: inspect_converted_data.ipynb
singer_lab_to_nwb/: array_iterators.py  cell_explorer_custom_interface.py  convert_singer_lab_data.py  generate_new_phy_unit_ids.py  generate_probe_file.py  mat_conversion_utils.py  multi_dim_multi_file_array_iterator.py  multi_file_array_iterator.py  phy_conversion_utils.py  phy_unit_id_generator.py  readTrodesExtractedDataFile3.py  singer_lab_mat_loader.py  singer_lab_nwb_converter.py  singer_lab_preprocessing_interface.py  singer_phy_sorting_interface.py  spikegadgets_binaries_interface.py  update_phy_unit_ids.py  update_task_conversion_utils.py  update_task_data_interface.py  update_task_virmen_interface.py  utils.py
tests/: test_phy_conversion.py  test_preprocessing_conversion.py  test_virmen_conversion.py
